--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Lembretes">
         <activity android:name=".MainActivity">
+
+        </activity>
+
+        <activity android:name=".ui.AddTaskActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
